# Doosan_Robotics_Rokey

./: .gitattributes  yolov8n.pt.516e2c7ea1bb492896ea9cabde6c86fb.partial
AI&computer_vision/PyQT5/: 00_PyQt5_basic_04_setToolTip.py  00_PyQt5_basic_05_statusBar.py  00_PyQt5_basic_07_toolBar.py  00_PyQt5_basic_08_center_mainWindow.py  00_PyQt5_basic_09_QDate.py  00_PyQt5_setWindowTitle.py  01_PyQt5_buttonclicked.py  03_PyQt5_QMainWindow_class.py  04_PyQt5_QMainWindow_messageBox.py  07_quit_button2.py  09_PyQt5_QSlider_QProgressBar.py  12_PyQt5_QTableView.py  14_PyQt5_slot_04.py  15_PyQt5_painting_01.py  15_PyQt5_painting_06.py  16_PyQt5_example_00.py  button02.py  myjoystick_00.py  myjoystick_05.py  myjoystick_06.py
AI&computer_vision/open_cv/: opencv_02.ipynb  opencv_03.ipynb  opencv_07.ipynb
AI(computer_vision)/PyQT5/: 00_PyQt5_basic_02_QIcon.py  00_PyQt5_basic_03_Quit.py  00_PyQt5_basic_04_setToolTip.py  00_PyQt5_basic_05_statusBar.py  00_PyQt5_basic_06_menuBar.py  02_PyQt5_absolute_positioning.py  05_button01_setGeometry.py  10_PyQt5_QDateEdit.py  11_PyQt5_QListView.py  13_PyQt5_QDialog.py  13_PyQt5_Widget_08_QSlide_QDial.py  13_PyQt5_Widget_14_QSpinBox.py  13_PyQt5_Widget_15_QDoubleSpinBox.py  13_PyQt5_Widget_17_QTimeEdit.py  14_PyQt5_slot_00.py  (+18 more)
project_ws/src/serv_int_msgs/: CMakeLists.txt  package.xml  이용방법.txt
project_ws/src/serv_int_msgs/action/: ActionExample.action  CustomAction.action  OrderAction.action
project_ws/src/serv_int_msgs/srv/: Order.srv  SrvExample.srv
python_study/: study_myself.py
ros2_ws/: .package.xml.swp  turtlesim.yaml
(+392 files in other folders)
